<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilePage">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/returnButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:focusable="auto"
        android:focusableInTouchMode="false"
        android:onClick="onReturnClick"
        app:backgroundTint="#000000"
        app:fabCustomSize="50dp"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="@+id/productToolbar"
        app:layout_constraintEnd_toStartOf="@+id/profileTitle"
        app:layout_constraintStart_toStartOf="@+id/profileToolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="40dp"
        app:srcCompat="@drawable/abc_vector_test" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profile_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="21dp"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:onClick="showMsg"
        app:backgroundTint="#FFFFFF"
        app:fabCustomSize="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="80dp"
        app:srcCompat="@drawable/profile" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginBottom="21dp"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:onClick="onReturnClick"
        app:backgroundTint="#FFFFFF"
        app:fabCustomSize="80dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="80dp"
        app:srcCompat="@drawable/home" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/container"
        android:layout_width="411dp"
        android:layout_height="260dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/frame"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/purchase_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileToolbar"
        app:layout_constraintVertical_bias="0.357" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profileToolbar"
        android:layout_width="412dp"
        android:layout_height="wrap_content"
        android:background="#798FCF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/your_profile"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/profileToolbar"
        app:layout_constraintEnd_toEndOf="@+id/profileToolbar"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profileImg"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileToolbar"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/username"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toEndOf="@+id/profileImg"
        app:layout_constraintTop_toTopOf="@+id/profileImg" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/profileImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toEndOf="@+id/profileImg"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/purchase_history"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:layout_marginTop="288dp"
        android:background="#000000"
        android:text="@string/purchase_history_btn"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileToolbar" />

    <Button
        android:id="@+id/contact_us"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:background="#000000"
        android:text="@string/contact_us_btn"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchase_history" />

    <Button
        android:id="@+id/about_us"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:background="#000000"
        android:text="@string/about_us_btn"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_us"
        app:layout_constraintVertical_bias="0.024" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editProfileBtn"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:clickable="true"
        app:backgroundTint="#FFFFFF"
        app:fabCustomSize="75dp"
        app:layout_constraintBottom_toBottomOf="@+id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/container"
        app:layout_constraintTop_toBottomOf="@+id/profileImg"
        app:layout_constraintVertical_bias="0.333"
        app:maxImageSize="45dp"
        app:srcCompat="@drawable/edit" />

</androidx.constraintlayout.widget.ConstraintLayout>